welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:4: error: not found: value t
  for ( i <- 1 to t){
                  ^